--- a/css/12bool.css
+++ b/css/12bool.css
@@ -19,6 +19,13 @@
     margin-top: 1px;
 }
 
+.container-2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 1px;
+}
+
 .box{
     padding-top: 5px;
     padding-bottom: 5px;
@@ -36,4 +43,16 @@
 
 .col-5{
     width: calc((100% / 12) * 5);
+}
+
+.col-6{
+    width: calc((100% / 12) * 6);
+}
+
+.col-8{
+    width: calc((100% / 12) * 8);
+}
+
+.col-12{
+    width: 100%;
 }
