--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@
     text-align: center;
     background-color: #006cfa;
 }
+
+.container-2 div{
+    background-color: #00e165;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
