--- a/css/12bool.css
+++ b/css/12bool.css
@@ -7,6 +7,8 @@
     font-family: sans-serif;
 }
 
+
+
 .content{
     max-width: 100vw;
     margin: 0 auto;
@@ -33,6 +35,8 @@
     margin-right: 1px;
 }
 
+/*COL*/
+
 .col-1{
     width: calc(100% / 12);
 }
@@ -42,11 +46,11 @@
 }
 
 .col-3{
-    width: calc((100% / 12) * 3);
+    width: calc(100% / 4);
 }
 
 .col-4{
-    width: calc((100% / 12) * 4);
+    width: calc(100% / 3);
 }
 
 .col-5{
@@ -54,7 +58,7 @@
 }
 
 .col-6{
-    width: calc((100% / 12) * 6);
+    width: 50%;
 }
 
 .col-7{
@@ -79,4 +83,49 @@
 
 .col-12{
     width: 100%;
+}
+
+/*OFFSET*/
+.offset-1{
+    margin-left: calc((100% / 12) * 1);
+}
+
+.offset-2{
+    margin-left: calc((100% / 12) * 2);
+}
+
+.offset-3{
+    margin-left: calc((100% / 12) * 3);
+}
+
+.offset-4{
+    margin-left: calc((100% / 12) * 4);
+}
+
+.offset-5{
+    margin-left: calc((100% / 12) * 5);
+}
+
+.offset-6{
+    margin-left: calc((100% / 12) * 6);
+}
+
+.offset-7{
+    margin-left: calc((100% / 12) * 7);
+}
+
+.offset-8{
+    margin-left: calc((100% / 12) * 8);
+}
+
+.offset-9{
+    margin-left: calc((100% / 12) * 9);
+}
+
+.offset-10{
+    margin-left: calc((100% / 12) * 10);
+}
+
+.offset-11{
+    margin-left: calc((100% / 12) * 11);
 }
